# supervisor-react

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  AGENTS.md  MANIFEST.in  Makefile  Pipfile  README.md  package-lock.json  poetry.txt  py2.txt  py3.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  update.sh  update2.sh  update3.sh
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml  codeql-analysis.yml  nodejs.yml  python-package.yml  pythonpackage.yml
react-app/: Makefile  build.sh  next.config.ts  package-lock.json  package.json  postcss.config.mjs  run.sh  tsconfig.json  update.sh
react-app/app/: layout.tsx  page.tsx  supervisor.ts
react-app/public/: index.html  manifest.json
react-app/src/: App.css  App.test.tsx  App.tsx  index.tsx  supervisor.ts
react-app/src/xmlrpc/: DateFormatter.ts  Deserializer.ts  Serializer.ts  XmlRpcClient.ts  XmlRpcFault.ts  index.ts
supervisor_react/: __init__.py  __main__.py
tests/: supervisord.conf
updatecli.d/: github-action.yaml  npm.yaml
