[tool.poetry]
name = "supervisor-react"
version = "0.7.0"
description = "A web interface for supervisor"
authors = ["Cyril Jouve <jv.cyril@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/jouve/supervisor-react"
include = ["supervisor_react/statics/**/*"]

[tool.poetry.scripts]
supervisor-react = "supervisor_react:main"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "*"
httpx = "*"
starlette = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pyright = "*"
ruff = "*"
supervisor = "*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [ "ALL" ]
extend-ignore = [
    "ANN201",
    "COM812",
    "D",
    "ISC001",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
