[project]
name = "supervisor-react"
version = "0.8.0"
description = "A web interface for supervisor"
readme = "README.md"
requires-python = "^3.11"
license = "GPL-3.0-only"
authors = [{ name = "Cyril Jouve", email = "jv.cyril@gmail.com" }]
dependencies = ["aiofiles", "httpx", "starlette", "uvicorn"]

[project.urls]
source = "https://github.com/jouve/supervisor-react"

[project.scripts]
supervisor-react = "supervisor_react:main"

[tool.poetry]
include = ["supervisor_react/statics/**/*"]

[tool.poetry.group.dev.dependencies]
pyright = "*"
ruff = "*"
supervisor = "*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["ANN201", "COM812", "D", "ISC001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
