[project]
name = "supervisor-react"
version = "0.8.0"
description = "A web interface for supervisor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Cyril Jouve", email = "jv.cyril@gmail.com" },
]
dependencies = [
    "aiofiles",
    "httpx",
    "starlette",
    "uvicorn",
]

[project.urls]
source = "https://github.com/jouve/supervisor-react"

[project.scripts]
supervisor-react = "supervisor_react:main"

[dependency-groups]
dev = [
    "pyright",
    "ruff",
    "supervisor",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "supervisor_react",
]
artifacts = [
    "statics",
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "statics",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["ANN201", "COM812", "D", "ISC001"]
