[metadata]
name = supervisor-react
version = 0.1.4
description = A web interface for supervisor
long_descrition = README.md
license = GPL-3.0-only

[bdist_wheel]
universal = 1

[options]
include_package_data = True
install_requires =
  tornado<6
packages = find:

[options.entry_points]
console_scripts =
  supervisor-react = supervisor_react:main

[isort]
line_length = 120

[flake8]
max-line-length = 120

[pylint.MESSAGES CONTROL]
disable =
    abstract-method,
    arguments-differ,
    attribute-defined-outside-init,
    invalid-name,
    line-too-long,
    missing-class-docstring,
    missing-docstring,
    missing-function-docstring,
    missing-module-docstring,

[pylint.FORMAT]
max-line-length = 120

[yapf]
coalesce_brackets = false
column_limit = 120
dedent_closing_brackets = False
